--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <style>
+    body {
+      font-family: "Irma Text Light", Geneva, sans-serif;
+    }
+  </style>
   <title>Marionette Contact Manager</title>
-  <link href="./assets/css/bootstrap.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/textfonts.css">
+  <link href="./assets/css/bootstrap-select.css" rel="stylesheet">
   <link href="./assets/css/application.css" rel="stylesheet">
 </head>
 
@@ -11,7 +19,7 @@
 
   <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
-      <div class="container">
+      <div class="container title">
         <span class="brand">Matching supervisor</span>
       </div>
     </div>
@@ -27,135 +35,256 @@
         <th>Link</th>
         <th>Track</th>
         <th>Artist</th>
+        <th>Matches</th>
+        <th>Is Infringing</th>
       </tr>
     </thead>
     <tbody>
     </tbody>
+    <tfoot>
+      <tr>
+        <td colspan="3"> <button title="view details" type="button" class="btn btn-default js-reload" aria-label="Left Align">
+          <span class="glyphicon glyphicon-refresh js-show" aria-hidden="true"></span>
+        </button></td>
+      </tr>
+    </tfoot>
   </script>
 
   <script type="text/template" id="contact-list-item">
-    <td href="<%- link %>"><%- link %></td>
-    <td><%- track %></td>
-    <td><%- artist %></td>
-    <td>
-      <a href="#" class="btn btn-small js-show">
-        <i class="icon-eye-open"></i>
-        Show
-      </a>
-      <button class="btn btn-small js-delete">
-        <i class="icon-remove"></i>
-        Delete
-      </button>
-    </td>
+
+    <table class="table table-hover">
+      <td><a href="<%- link %>"><%- link %></a></td>
+      <td><%- track %></td>
+      <td><%- artist %></td>
+      <td><%- matched %></td>
+      <td><%- isInfringing %></td>
+      <td>
+        <button title="view details" type="button" class="btn btn-default js-show" aria-label="Left Align">
+          <span class="glyphicon glyphicon-edit js-show" aria-hidden="true"></span>
+        </button>
+      </td>
+    </table>    
+
   </script>
 
 
 
   <script type="text/template" id="contact-view">
+    <form>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="panel panel-primary">
+            <div class="panel-heading">Datasift Interaction fields</div>
+            <div class="panel-body">
+              <div class="input-group editorText">
+               <span class="input-group-addon">Track Name:</span>
+               <input id="contact-firstName" class="form-control js-input-text" name="track"
+               type="text" value="<%= track %>"/>
+             </div>
+             <div class="input-group editorText">
+               <span for="contact-lastName" class="input-group-addon">
+                 Artist name:</span>
+                 <input id="contact-lastName" name="artist" class="form-control js-input-text"
+                 type="text" value="<%= artist %>"/>
+               </div>
+               <div class="input-group editorText">
+                 <span for="contact-phoneNumber" class="input-group-addon">
+                   Matches :</span>  
+                   <input id="link-matched" class=" js-matched editorCheckbox"name="matched"
+                   type="checkbox" value="<%= matched %>" <% if (matched) { %>checked="checked"<% } %>/>
+                 </div>
+                 <div class="input-group editorText">
+                   <span for="contact-phoneNumber" class="input-group-addon js-supervises">
+                     Supervised :</span>
+                     <input id="link-supervised" class=" js-supervised editorCheckbox" name="supervised"
+                     type="checkbox" value="<%= supervised %>" <% if (supervised) { %>checked="checked"<% } %>/>
+                   </div>
+                   <div class="input-group editorText">
+                     <span for="contact-phoneNumber" class="input-group-addon js-supervises">
+                       Is Infringing :</span>
+                       <input id="link-infringing" class=" js-infringing editorCheckbox" name="isInfringing"
+                       type="checkbox" value="<%= isInfringing %>" <% if (isInfringing) { %>checked="checked"<% } %>/>
+                     </div>           
 
-    <p><strong>Content:</strong> <%- content %></p>
-    <p><strong>Social Interaction:</strong> <%- link %></p>
-    <p><strong>Tags</strong> <%- tags %></p>
-    <p><strong>Interaction Source:</strong> <%- type %></p>
-    <p><strong>Phone number:</strong> <%- content %></p>
-    <p><strong>Normalized_url:</strong> <%- normalized_url %></p>
-    <p><strong>Url:</strong> <%- url %></p>
-    <p><strong>Page titles:</strong> <%- title %></p>
-    <p><strong>Status:</strong> <%- status %></p>
-    <p><strong>Detail:</strong> <%- detail %></p>
-    <p><strong>Date:</strong> <%- date %></p>
-    <p><strong>Matches:</strong> <%- matched %></p>
-    <p><strong>Track:</strong> <%- track %></p>
-    <p><strong>Artist:</strong> <%- artist %></p>
-    <p><strong>supervised:</strong> <%- supervised %></p>
-    <a href="#contacts/<%= id %>/edit" class="btn btn-small js-edit">
-     <i class="icon-pencil"></i>
-     Edit this contact
-   </a>
- </script>
- <script type="text/template" id="contact-view">
-  <h1><%= content %> | <%= track %> | <%= artist %></h1>
-  <a href="#contacts/<%= id %>/edit" class="btn btn-small js-edit">
-   <i class="icon-pencil"></i>
-   Edit this contact
- </a>
-</script>
-<script type="text/template" id="contact-form">
-  <h1>Edit  </h1>
-  <form>
-    <div class="control-group">
-      <label for="contact-firstName" class="control-label">
-        Track Name:</label>
-        <input id="contact-firstName" name="track"
-        type="text" value="<%= track %>"/>
-      </div>
-      <div class="control-group">
-       <label for="contact-lastName" class="control-label">
-         Artist name:</label>
-         <input id="contact-lastName" name="artist"
-         type="text" value="<%= artist %>"/>
-       </div>
-       <div class="control-group">
-         <label for="contact-phoneNumber" class="control-label ">
-           Matches :</label>  
-           <input id="link-matched" class="js-matched"name="matched"
-           type="checkbox" value="<%= matched %>" <% if (matched) { %>checked="checked"<% } %>/>
-         </div>
-         <div class="control-group">
-           <label for="contact-phoneNumber" class="control-label  js-supervises">
-             Supervised :</label>
-             <input id="link-supervised" class="js-supervised" name="supervised"
-             type="checkbox" value="<%= supervised %>" <% if (supervised) { %>checked="checked"<% } %>/>
+                     <div class="input-group editorText">        
+                      <label for="contact-phoneNumber" class="input-group-addon   js-infringingLocation">
+                       Infringing Location</label>
+                       <select name="infringingLocation" class="editorDropdown  dropdown-toggle selectpicker btn-default">
+                        <option  value="content" <% if (infringingLocation == "content") { %>selected="selected"<% } %>>content</option>
+                        <option  value="url" <% if (infringingLocation == "url") { %>selected="selected"<% } %>>url</option>
+                        <option  value="normalized_url" <% if (infringingLocation == "normalized_url") { %>selected="selected"<% } %>>normalized_url</option>
+                        <option  value="titles" <% if (infringingLocation == "titles") { %>selected="selected"<% } %>>page title</option>
+                      </select>
+                    </div>
+
+                    <button class="btn js-submit">Save</button>
+
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="panel panel-info">
+                  <div class="panel-heading">Datasift Interaction fields</div>
+                  <div class="panel-body">
+                    <p><strong>Content:</strong> <%- content %></p>
+                    <p><strong>Social Interaction:</strong> <%- link %></p>
+                    <p><strong>Tags</strong> <%- tags %></p>
+                    <p><strong>Interaction Source:</strong> <%- type %></p>
+                    <p><strong>Phone number:</strong> <%- content %></p>
+                    <p><strong>Normalized_url:</strong> <%- normalized_url %></p>
+                    <p><strong>Url:</strong> <%- url %></p>
+                    <p><strong>Page titles:</strong> <%- title %></p>
+                    <p><strong>Status:</strong> <%- status %></p>
+                    <p><strong>Detail:</strong> <%- detail %></p>
+                    <p><strong>Date:</strong> <%- date %></p>
+                    <p><strong>Matches:</strong> <%- matched %></p>
+                    <p><strong>Track:</strong> <%- track %></p>
+                    <p><strong>Artist:</strong> <%- artist %></p>
+                    <p><strong>supervised:</strong> <%- supervised %></p>
+                    <a href="#contacts/<%= id %>/edit" class="btn btn-small js-edit">
+                     <i class="icon-pencil"></i>
+                     Edit this contact
+                   </a>
+                 </div>
+               </div>
+             </div>
            </div>
-           <div class="control-group">
-           <label for="contact-phoneNumber" class="control-label  js-supervises">
-             Is Infringing :</label>
-             <input id="link-infringing" class="js-infringing" name="isInfringing"
-             type="checkbox" value="<%= isInfringing %>" <% if (isInfringing) { %>checked="checked"<% } %>/>
-           </div>           
-          <div class="control-group">        
-          <label for="contact-phoneNumber" class="control-label  js-infringingLocation">
-           Infringing Location</label>
-           <select name="infringingLocation">
-            <option value="content" <% if (infringingLocation == "content") { %>selected="selected"<% } %>>content</option>
-            <option value="url" <% if (infringingLocation == "url") { %>selected="selected"<% } %>>url</option>
-            <option value="normalized_url" <% if (infringingLocation == "normalized_url") { %>selected="selected"<% } %>>normalized_url</option>
-            <option value="titles" <% if (infringingLocation == "titles") { %>selected="selected"<% } %>>page title</option>
-          </select>
-        </div>
 
-        <button class="btn js-submit">Save</button>
-      </form>
-    </script>
-    <script type="text/template" id="loading-view">
-     <h1><%= title %></h1>
-     <p><%= message %></p>
-     <div id="spinner"></div>
-   </script>
+         </form>
+       </script>
+       <script type="text/template" id="contact-view">
+        <h1><%= content %> | <%= track %> | <%= artist %> | <%= matches %> | <%= isInfringing %></h1>
+        <a href="#contacts/<%= id %>/edit" class="btn btn-small js-edit">
+         <i class="icon-pencil"></i>
+         Edit this contact
+       </a>
+     </script>
+     <script type="text/template" id="contact-form">
+      <form>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="panel panel-default">
+              <div class="panel-heading">IFPI Manual supervision fields</div>
+              <div class="panel-body">
+                <div class="input-group editorText">
+                 <span class="input-group-addon">Track Name:</span>
+                 <input id="contact-firstName" class="form-control js-input-text" name="track"
+                 type="text" value="<%= track %>"/>
+               </div>
+               <div class="input-group editorText">
+                 <span for="contact-lastName" class="input-group-addon">
+                   Artist name:</span>
+                   <input id="contact-lastName" name="artist" class="form-control js-input-text"
+                   type="text" value="<%= artist %>"/>
+                 </div>
+                 <div class="input-group editorText">
+                   <span for="contact-phoneNumber" class="input-group-addon">
+                     Matches :</span>  
+                     <input id="link-matched" class=" js-matched editorCheckbox"name="matched"
+                     type="checkbox" value="<%= matched %>" <% if (matched) { %>checked="checked"<% } %>/>
+                   </div>
+                   <div class="input-group editorText">        
+                    <label for="contact-phoneNumber" class="input-group-addon   js-infringingLocation">
+                     Matching Location</label>
+                     <select name="infringingLocation" class="editorDropdown  dropdown-toggle selectpicker btn-default" multiple>
+                      <option value="content" <% if (infringingLocation == "content") { %>selected="selected"<% } %>>content</option>
+                      <option value="url" <% if (infringingLocation == "url") { %>selected="selected"<% } %>>url</option>
+                      <option value="normalized_url" <% if (infringingLocation == "normalized_url") { %>selected="selected"<% } %>>normalized_url</option>
+                      <option value="titles" <% if (infringingLocation == "titles") { %>selected="selected"<% } %>>page titles</option>
+                    </select>
+                  </div>
+                  <div class="input-group editorText">
+                   <span for="contact-phoneNumber" class="input-group-addon js-infringing">
+                     Is Infringing :</span>
+                     <input id="link-infringing" class="js-infringing editorCheckbox" name="isInfringing"
+                     type="checkbox" value="<%= isInfringing %>" <% if (isInfringing) { %>checked="checked"<% } %>/>
+                   </div>  
+                   <div class="input-group editorText">
+                     <span for="contact-phoneNumber" class="input-group-addon js-supervises">
+                       Supervised :</span>
+                       <input id="link-supervised" class=" js-supervised editorCheckbox" name="supervised"
+                       type="checkbox" value="<%= supervised %>" <% if (supervised) { %>checked="checked"<% } %>/>
+                     </div>
 
-   <script type="text/template" id="missing-contact-view">
-     <div class="alert alert-error">This contact doesn't exist !</div>
-   </script>
-   <script src="./assets/js/vendor/jquery.js"></script>
-   <script src="./assets/js/vendor/json2.js"></script>
-   <script src="./assets/js/vendor/underscore.js"></script>
-   <script src="./assets/js/vendor/backbone.js"></script>
-   <script src="./assets/js/vendor/backbone.marionette.js"></script>
-   <script src="./assets/js/vendor/backbone.syphon.js"></script>
 
-   <script src="./assets/js/app.js"></script>
-   <script src="./assets/js/entities/contact.js"></script>
 
-   <script src="./assets/js/apps/contacts/contacts_app.js"></script>
-   <script src="./assets/js/apps/contacts/list/list_view.js"></script>
-   <script src="./assets/js/apps/contacts/list/list_controller.js"></script>
-   <script src="./assets/js/apps/contacts/show/show_view.js"></script>
-   <script src="./assets/js/apps/contacts/show/show_controller.js"></script>
-   <script src="./assets/js/apps/contacts/edit/edit_view.js"></script>
-   <script src="./assets/js/apps/contacts/edit/edit_controller.js"></script>
-   <script src="./assets/js/common/views.js"></script>
-   <script type="text/javascript">
-    ContactManager.start();
-  </script>
-</body>
-</html>
+
+
+                     <button id="back" title="back to list" type="button" class="btn btn-default js-back back" aria-label="Left Align">
+                      <span class="glyphicon  glyphicon-arrow-left" aria-hidden="true"></span>
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="panel panel-default">
+                  <div class="panel-heading">Datasift Interaction fields</div>
+                  <div class="panel-body">
+
+                  <p><img title="<%- type %>" src="http://www.google.com/s2/favicons?domain=<%-type%>.com"/></p> 
+                    <p><strong>Social Interaction:</strong> <a href="<%- link %>"> <%- link %></a></p>
+                    <p><strong>Tags</strong> <%- tags %></p>
+                                  
+                    <p> <strong>Normalized_url:</strong> <a href="<%- normalized_url %>"><%- normalized_url %></a></p>
+                    <p><strong>Url:</strong><a href="<%- url %>"> <%- url %></a></p>
+                    <p><strong>Page titles:</strong> <%- title %></p>
+                      <p><strong>Content:</strong> <%- content %></p>
+                     <p><strong>id:</strong> <%- id %></p>         
+                    <div class="panel panel-default">
+                  <div class="panel-heading">IFPI Automated process fields</div>
+                  <div class="panel-body">
+                    <p><strong>Status:</strong> <%- status %></p>
+                    <p><strong>Detail:</strong> <%- detail %></p>
+                    <p><strong>Date:</strong> <%- date %></p>
+
+                     </div>
+                </div>
+              </div>
+  
+                         
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </form>
+        </script>  
+        <script type="text/template" id="loading-view">
+         <h1><%= title %></h1>
+         <p><%= message %></p>
+         <div id="spinner"></div>
+       </script>
+
+       <script type="text/template" id="missing-contact-view">
+         <div class="alert alert-error">This contact doesnt exist !</div>
+       </script>
+       <script src="./assets/js/vendor/jquery.js"></script>
+       <script src="./assets/js/vendor/json2.js"></script>
+       <script src="./assets/js/vendor/underscore.js"></script>
+       <script src="./assets/js/vendor/backbone.js"></script>
+       <script src="./assets/js/vendor/backbone.marionette.js"></script>
+       <script src="./assets/js/vendor/backbone.syphon.js"></script>
+       <script src="./assets/js/vendor/bootstrap-select.js"></script>
+       <script>  $('.selectpicker').selectpicker({
+        style: 'btn-info',
+        size: 4
+      });</script>
+
+       <script src="./assets/js/app.js"></script>
+       <script src="./assets/js/entities/contact.js"></script>
+
+       <script src="./assets/js/apps/contacts/contacts_app.js"></script>
+       <script src="./assets/js/apps/contacts/list/list_view.js"></script>
+       <script src="./assets/js/apps/contacts/list/list_controller.js"></script>
+       <script src="./assets/js/apps/contacts/show/show_view.js"></script>
+       <script src="./assets/js/apps/contacts/show/show_controller.js"></script>
+       <script src="./assets/js/apps/contacts/edit/edit_view.js"></script>
+       <script src="./assets/js/apps/contacts/edit/edit_controller.js"></script>
+       <script src="./assets/js/common/views.js"></script>
+       <!-- Latest compiled and minified JavaScript -->
+       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+       <script type="text/javascript">
+        ContactManager.start();
+      </script>
+    </body>
+    </html>
